# pyiso3166

./: AUTHORS  DESCRIPTION  README.md  setup.cfg
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml  settings.vscode.json
src/pyiso3166/: .gitignore  __init__.py  pyiso3166.py
