[metadata]
name = pyiso3166
version = 0.0.3
author = Sebastian Steins
author_email = opensource@seb.st
description = ISO 3166-2 info for Python Projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebst/pyiso3166
project_urls =
    Bug Tracker = https://github.com/sebst/pyiso3166/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src